backporting TRUNK-2051 to branches/1.8.x - fixed ever-present horizontal scrollbar in chrome (IE and FF still work)
git-svn-id: http://svn.openmrs.org/openmrs/branches/1.8.x@18471 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/webapp/src/main/webapp/openmrs.css
+++ b/webapp/src/main/webapp/openmrs.css
@@ -117,15 +117,11 @@ a:hover {
 }
 
 #userBar {
-	position: absolute;
-	top: 0px;
-	left: 0px;
 	text-align: right;
 	padding-top: 3px;
     padding-right:5px;
 	margin: 0px;
 	z-index: 10;
-	width: 100%;
 	color: #333333;
 	line-height: 26px;
 }
@@ -156,7 +152,6 @@ a:hover {
 	
 #content {
 	margin: 0px 0 0 0;
-	width: 100%;
 	padding: 80px 10px 10px 10px;	font-size: 1.2em;
 	background-color: #ffffff;
 	z-index: 8;
